Your commit message

--- a/src/home/header/home.css
+++ b/src/home/header/home.css
@@ -217,6 +217,7 @@
     }
     .dropment-main-blog-page-section1 h1 {
         font-size: 40px;
+        margin-top: 80px;
     }
     .dropment-main-blog-page-section2 {
         margin-top: 100px;
@@ -355,6 +356,7 @@
     }
     .dropment-main-blog-page-section1 h1 {
         font-size: 50px;
+        margin-top: 80px;
     }
     .dropment-main-blog-page-section2 {
         margin-top: 100px;
