Your commit message

--- a/src/home/header/home.css
+++ b/src/home/header/home.css
@@ -1113,7 +1113,7 @@
 }
 
 .dropment-main-blog-page-section5 p {
-    color: white;
+    color: rgb(255, 255, 255);
     width: 700px;
     font-size: 20px;
 }
@@ -1122,11 +1122,12 @@
     font-size: 16px;
     position: relative;
     transition: padding-left 0.3s ease; /* Transition effect for padding change */
-    background-color: transparent;
+    background-color: black;
     color: white;
-    border: none;
+    border: 2px solid black;
     cursor: pointer;
     margin-top: 30px;
+    border-radius: 15px;
   }
   
   .get-started-button::after {
@@ -1143,7 +1144,10 @@
   
   .get-started-button:hover {
     padding-left: 15px; /* Shift text to the left on hover */
-    text-decoration: underline;
+    background-color: transparent;
+    color: rgb(255, 255, 255);
+    transition: 0.3s;
+    border: 2px solid white;
   }
 }
 
