Your commit message

--- a/src/home/header/home.css
+++ b/src/home/header/home.css
@@ -216,7 +216,7 @@
         border: 1px solid #661AC6;
     }
     .dropment-main-blog-page-section5 {
-        background: linear-gradient(to right, #0077b3, #8cffba);
+        background: linear-gradient(to right, #00b309, #8ca7ff);
         background-size: 100% 100%;
         padding: 40px;
         text-align: center;
@@ -489,7 +489,7 @@
         border: 1px solid #661AC6;
     }
     .dropment-main-blog-page-section5 {
-        background: linear-gradient(to right, #0077b3, #8cffba);
+        background: linear-gradient(to right, #00b309, #8ca7ff);
         background-size: 100% 100%;
         padding: 40px;
         text-align: center;
@@ -772,7 +772,7 @@
         border: 1px solid #661AC6;
     }
     .dropment-main-blog-page-section5 {
-        background: linear-gradient(to right, #0077b3, #8cffba);
+        background: linear-gradient(to right, #00b309, #8ca7ff);
         background-size: 100% 100%;
         padding: 40px;
         text-align: center;
@@ -1096,7 +1096,7 @@
     border: 1px solid #661AC6;
 }
 .dropment-main-blog-page-section5 {
-    background: linear-gradient(to right, #0077b3, #8cffba);
+    background: linear-gradient(to right, #00b309, #8ca7ff);
     background-size: 100% 100%;
     padding: 40px;
     text-align: center;
