--- a/src/home/header/home.css
+++ b/src/home/header/home.css
@@ -265,6 +265,58 @@
       .get-started-button:hover {
         padding-left: 15px; /* Shift text to the left on hover */
       }
+      .dropment-main-blog-page-section6 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center; /* Align text content center */
+        padding: 20px;
+        background-color: #F9FAFB;
+        background-size: cover;
+        background-position: center;
+        border-radius: 25px;
+        margin: 100px 6px;
+    }
+    
+    .dropment-main-blog-page-section6-img {
+        margin-right: 20px; /* Add space between image and text */
+    }
+    
+    .dropment-main-blog-page-section6-img img {
+        width: 300px; /* Ensure the image doesn't exceed its container */
+        border-radius: 25px;
+    }
+    
+    .dropment-main-blog-page-section6-txt {
+        width: 300px;
+        margin-top: 50px;
+    }
+    
+    .dropment-main-blog-page-section6-txt h2 {
+        color: #242E47;
+        font-size: 30px;
+        margin-bottom: 10px; /* Add space between heading and paragraph */
+    }
+    
+    .dropment-main-blog-page-section6-txt p {
+        color: #7B88A8;
+        font-size: 16px;
+        margin-top: 30px;
+    }
+    
+    .dropment-main-blog-page-section6-txt button {
+        font-size: 15px;
+        color: white;
+        background-color: #91BC42;
+        padding: 12px 13px;
+        border: 1px solid #91BC42;
+        margin-bottom: 50px;
+        margin-top: 10px;
+        border-radius: 15px;
+        cursor: pointer;
+    }
+    
 }
     
   @media (min-width: 481px) and (max-width: 768px) {
@@ -538,6 +590,57 @@
       .get-started-button:hover {
         padding-left: 15px; /* Shift text to the left on hover */
       }
+      .dropment-main-blog-page-section6 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center; /* Align text content center */
+        padding: 20px;
+        background-color: #F9FAFB;
+        background-size: cover;
+        background-position: center;
+        border-radius: 25px;
+        margin: 100px 6px;
+    }
+    
+    .dropment-main-blog-page-section6-img {
+        margin-right: 20px; /* Add space between image and text */
+    }
+    
+    .dropment-main-blog-page-section6-img img {
+        width: 400px; /* Ensure the image doesn't exceed its container */
+        border-radius: 25px;
+    }
+    
+    .dropment-main-blog-page-section6-txt {
+        width: 400px;
+        margin-top: 50px;
+    }
+    
+    .dropment-main-blog-page-section6-txt h2 {
+        color: #242E47;
+        font-size: 30px;
+        margin-bottom: 10px; /* Add space between heading and paragraph */
+    }
+    
+    .dropment-main-blog-page-section6-txt p {
+        color: #7B88A8;
+        font-size: 16px;
+        margin-top: 30px;
+    }
+    
+    .dropment-main-blog-page-section6-txt button {
+        font-size: 15px;
+        color: white;
+        background-color: #91BC42;
+        padding: 12px 13px;
+        border: 1px solid #91BC42;
+        margin-bottom: 50px;
+        margin-top: 10px;
+        border-radius: 15px;
+        cursor: pointer;
+    }
   }
   
   @media (min-width: 769px) and (max-width: 1024px) {
@@ -821,6 +924,60 @@
       .get-started-button:hover {
         padding-left: 15px; /* Shift text to the left on hover */
       }
+      .dropment-main-blog-page-section6 {
+        padding: 20px;
+        background-color: #F9FAFB;
+        background-size: cover;
+        background-position: center;
+        border-radius: 25px;
+        display: flex;
+        margin: 150px 40px;
+    }
+    
+    .dropment-main-blog-page-sectiosection6n4-img {
+        margin-right: 20px; /* Add space between image and text */
+    }
+    
+    .dropment-main-blog-page-section6-img img {
+        width: 400px; /* Ensure the image doesn't exceed its container */
+        border-radius: 25px;
+        margin-top: 40px;
+        margin-left: 20px;
+    }
+    
+    .dropment-main-blog-page-section6-txt {
+        text-align: center;
+        width: 500px;
+    }
+    
+    .dropment-main-blog-page-section6-txt h2 {
+        color: #242E47;
+        font-size: 25px;
+        margin-bottom: 10px; /* Add space between heading and paragraph */
+    }
+    
+    .dropment-main-blog-page-section6-txt p {
+        color: #7B88A8;
+        font-size: 16px;
+        margin-top: 30px;
+    }
+    .dropment-main-blog-page-section6-txt button {
+        font-size: 19px;
+        color: white;
+        background-color: #91BC42;
+        padding: 12px 20px;
+        border: 1px solid #91BC42;
+        margin-top: 20px;
+        border-radius: 15px;
+        cursor: pointer;
+    }
+    .dropment-main-blog-page-section6-txt button:hover {
+        background-color: transparent;
+        color: black;
+        border-radius: 15px;
+        transition: 0.3s;
+        border: 1px solid #661AC6;
+    }
   }
   @media (min-width: 1025px) {
    .dropment-branding-main-page img {
@@ -1149,6 +1306,60 @@
     transition: 0.3s;
     border: 2px solid white;
   }
+  .dropment-main-blog-page-section6 {
+    padding: 20px;
+    background-color: #F9FAFB;
+    background-size: cover;
+    background-position: center;
+    border-radius: 25px;
+    display: flex;
+    margin: 150px 40px;
+}
+
+.dropment-main-blog-page-section6-img {
+    margin-right: 20px; /* Add space between image and text */
+}
+
+.dropment-main-blog-page-section6-img img {
+    width: 700px; /* Ensure the image doesn't exceed its container */
+    border-radius: 25px;
+}
+
+.dropment-main-blog-page-section6-txt {
+    text-align: center;
+    width: 500px;
+    margin-top: 50px;
+    margin-right: 30px;
+}
+
+.dropment-main-blog-page-section6-txt h2 {
+    color: #242E47;
+    font-size: 30px;
+    margin-bottom: 10px; /* Add space between heading and paragraph */
+}
+
+.dropment-main-blog-page-section6-txt p {
+    color: #7B88A8;
+    font-size: 16px;
+    margin-top: 30px;
+}
+.dropment-main-blog-page-section6-txt button {
+    font-size: 19px;
+    color: rgb(255, 255, 255);
+    background-color: #91BC42;
+    padding: 12px 20px;
+    border: 1px solid #91BC42;
+    margin-top: 50px;
+    border-radius: 15px;
+    cursor: pointer;
+}
+.dropment-main-blog-page-section6-txt button:hover {
+    background-color: transparent;
+    color: rgb(0, 0, 0);
+    border-radius: 15px;
+    transition: 0.3s;
+    border: 1px solid #91BC42;
+}
 }
 
 
