--- a/src/home/header/home.css
+++ b/src/home/header/home.css
@@ -216,7 +216,7 @@
         border: 1px solid #661AC6;
     }
     .dropment-main-blog-page-section5 {
-        background: linear-gradient(to right, #0077b3, #8cffba);
+        background: linear-gradient(to right, #007dbb, #00fc65);
         background-size: 100% 100%;
         padding: 40px;
         text-align: center;
@@ -581,7 +581,7 @@
         border: 1px solid #661AC6;
     }
     .dropment-main-blog-page-section5 {
-        background: linear-gradient(to right, #0077b3, #8cffba);
+        background: linear-gradient(to right, #007dbb, #00fc65);
         background-size: 100% 100%;
         padding: 40px;
         text-align: center;
@@ -947,7 +947,7 @@
         border: 1px solid #661AC6;
     }
     .dropment-main-blog-page-section5 {
-        background: linear-gradient(to right, #0077b3, #8cffba);
+        background: linear-gradient(to right, #007dbb, #00fc65);
         background-size: 100% 100%;
         padding: 40px;
         text-align: center;
@@ -1342,9 +1342,9 @@
 .dropment-main-blog-page-section4-txt button {
     font-size: 19px;
     color: white;
-    background-color: #661AC6;
+    background-color: #4CD792;
     padding: 12px 20px;
-    border: 1px solid #661AC6;
+    border: 1px solid #4CD792;
     margin-top: 50px;
     border-radius: 15px;
     cursor: pointer;
@@ -1354,10 +1354,10 @@
     color: black;
     border-radius: 15px;
     transition: 0.3s;
-    border: 1px solid #661AC6;
+    border: 1px solid #4CD792;
 }
 .dropment-main-blog-page-section5 {
-    background: linear-gradient(to right, #0077b3, #8cffba);
+    background: linear-gradient(to right, #007dbb, #00fc65);
     background-size: 100% 100%;
     padding: 40px;
     text-align: center;
@@ -1368,7 +1368,7 @@
   }
 
 .dropment-main-blog-page-section5 h1 {
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 40px;
     width: 500px;
 }
@@ -1450,9 +1450,9 @@
 .dropment-main-blog-page-section6-txt button {
     font-size: 19px;
     color: rgb(255, 255, 255);
-    background-color: #91BC42;
+    background-color: #4CD792;
     padding: 12px 20px;
-    border: 1px solid #91BC42;
+    border: 1px solid #4CD792;
     margin-top: 50px;
     border-radius: 15px;
     cursor: pointer;
@@ -1462,7 +1462,7 @@
     color: rgb(0, 0, 0);
     border-radius: 15px;
     transition: 0.3s;
-    border: 1px solid #91BC42;
+    border: 1px solid #4CD792;
 }
 .dropment-main-blog-page-section7 {
     margin: 80px 10px; /* Reduced margin for better spacing */
@@ -1501,6 +1501,24 @@
     margin-top: 15px; /* Space between content and border */
     font-size: 16px; /* Adjusted font size for content */
     color: #242E47;
+  }
+  .dropment-main-blog-page-section8 {
+    padding: 20px;
+    background-color: #000000;
+    margin: 150px 0px;
+  }
+  .heading-main-dropment-blog-page-section8 {
+    text-align: center;
+  }
+  .heading-main-dropment-blog-page-section8 h2 {
+    color: white;
+    font-size: 30px;
+  }
+  .dropment-main-blog-page-section8-q {
+    color: white;
+    text-align: center;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
   }
 }
 
